[project]
name = "ai-chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "google-generativeai>=0.8.6",
    "openai>=2.20.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.38.0",
]
